--- a/services.html
+++ b/services.html
@@ -196,6 +196,78 @@
                                     <div class="services-item-title">#Выпускной</div>
                                 </a>
                             </div>
+                            <div class="services-item newyear">
+                                <a href="#">
+                                    <img src="files/services-01.jpg" alt="" />
+                                    <div class="services-item-title">#Новый Год</div>
+                                </a>
+                            </div>
+                            <div class="services-item valentin">
+                                <a href="#">
+                                    <img src="files/services-02.jpg" alt="" />
+                                    <div class="services-item-title">#Валентинов день</div>
+                                </a>
+                            </div>
+                            <div class="services-item birthday">
+                                <a href="#">
+                                    <img src="files/services-03.jpg" alt="" />
+                                    <div class="services-item-title">#День рождения</div>
+                                </a>
+                            </div>
+                            <div class="services-item 8mar">
+                                <a href="#">
+                                    <img src="files/services-04.jpg" alt="" />
+                                    <div class="services-item-title">#8 марта</div>
+                                </a>
+                            </div>
+                            <div class="services-item birthday">
+                                <a href="#">
+                                    <img src="files/services-05.jpg" alt="" />
+                                    <div class="services-item-title">#День рождения</div>
+                                </a>
+                            </div>
+                            <div class="services-item birthday">
+                                <a href="#">
+                                    <img src="files/services-06.jpg" alt="" />
+                                    <div class="services-item-title">#День рождения</div>
+                                </a>
+                            </div>
+                            <div class="services-item birthday">
+                                <a href="#">
+                                    <img src="files/services-07.jpg" alt="" />
+                                    <div class="services-item-title">#День рождения</div>
+                                </a>
+                            </div>
+                            <div class="services-item birthday">
+                                <a href="#">
+                                    <img src="files/services-08.jpg" alt="" />
+                                    <div class="services-item-title">#День рождения</div>
+                                </a>
+                            </div>
+                            <div class="services-item vyp">
+                                <a href="#">
+                                    <img src="files/services-09.jpg" alt="" />
+                                    <div class="services-item-title">#Выпускной</div>
+                                </a>
+                            </div>
+                            <div class="services-item birthday">
+                                <a href="#">
+                                    <img src="files/services-10.jpg" alt="" />
+                                    <div class="services-item-title">#День рождения</div>
+                                </a>
+                            </div>
+                            <div class="services-item 8mar">
+                                <a href="#">
+                                    <img src="files/services-11.jpg" alt="" />
+                                    <div class="services-item-title">#8 марта</div>
+                                </a>
+                            </div>
+                            <div class="services-item vyp">
+                                <a href="#">
+                                    <img src="files/services-12.jpg" alt="" />
+                                    <div class="services-item-title">#Выпускной</div>
+                                </a>
+                            </div>
                         </div>
                         <!-- services list END -->
 
