--- a/main.html
+++ b/main.html
@@ -113,7 +113,7 @@
                         </div>
                         <!-- slider item END -->
 
-                        <!-- slider item -->
+                        <!-- slider item --
                         <div class="slider-item" style="background-image:url(files/slider-02.jpg)">
                             <div class="container">
                                 <div class="slider-item-inner">
@@ -129,7 +129,7 @@
                         </div>
                         <!-- slider item END -->
 
-                        <!-- slider item -->
+                        <!-- slider item --
                         <div class="slider-item" style="background-image:url(files/slider-03.jpg)">
                             <div class="container">
                                 <div class="slider-item-inner">
@@ -145,7 +145,7 @@
                         </div>
                         <!-- slider item END -->
 
-                        <!-- slider item -->
+                        <!-- slider item --
                         <div class="slider-item" style="background-image:url(files/slider-04.jpg)">
                             <div class="container">
                                 <div class="slider-item-inner">
@@ -161,7 +161,7 @@
                         </div>
                         <!-- slider item END -->
 
-                        <!-- slider item -->
+                        <!-- slider item --
                         <div class="slider-item" style="background-image:url(files/slider-05.jpg)">
                             <div class="container">
                                 <div class="slider-item-inner">
@@ -177,7 +177,7 @@
                         </div>
                         <!-- slider item END -->
 
-                        <!-- slider item -->
+                        <!-- slider item --
                         <div class="slider-item" style="background-image:url(files/slider-06.jpg)">
                             <div class="container">
                                 <div class="slider-item-inner">
@@ -209,7 +209,7 @@
                         </div>
                         <!-- slider item END -->
 
-                        <!-- slider item -->
+                        <!-- slider item --
                         <div class="slider-item" style="background-image:url(files/slider-08.jpg)">
                             <div class="container">
                                 <div class="slider-item-inner">
@@ -225,7 +225,7 @@
                         </div>
                         <!-- slider item END -->
 
-<!--
+                        <!-- slider item -->
                         <div class="slider-item" style="background-image:url(files/slider-09.jpg)">
                             <div class="container">
                                 <div class="slider-item-inner">
@@ -239,7 +239,9 @@
                                 </div>
                             </div>
                         </div>
+                        <!-- slider item END -->
 
+                        <!-- slider item -->
                         <div class="slider-item" style="background-image:url(files/slider-10.jpg)">
                             <div class="container">
                                 <div class="slider-item-inner">
@@ -253,7 +255,9 @@
                                 </div>
                             </div>
                         </div>
+                        <!-- slider item END -->
 
+                        <!-- slider item --
                         <div class="slider-item" style="background-image:url(files/slider-11.jpg)">
                             <div class="container">
                                 <div class="slider-item-inner">
@@ -267,8 +271,10 @@
                                 </div>
                             </div>
                         </div>
+                        <!-- slider item END -->
 
-                        <div class="slider-item" style="background-image:url(files/slider-13.jpg)">
+                        <!-- slider item -->
+                        <div class="slider-item" style="background-image:url(files/slider-12.jpg)">
                             <div class="container">
                                 <div class="slider-item-inner">
                                     <div class="slider-item-blur"><div class="slider-item-blur-inner" style="background-image:url(files/slider-12.jpg)"></div></div>
@@ -281,7 +287,9 @@
                                 </div>
                             </div>
                         </div>
+                        <!-- slider item END -->
 
+                        <!-- slider item --
                         <div class="slider-item" style="background-image:url(files/slider-13.jpg)">
                             <div class="container">
                                 <div class="slider-item-inner">
@@ -295,7 +303,9 @@
                                 </div>
                             </div>
                         </div>
+                        <!-- slider item END -->
 
+                        <!-- slider item -->
                         <div class="slider-item" style="background-image:url(files/slider-14.jpg)">
                             <div class="container">
                                 <div class="slider-item-inner">
@@ -309,7 +319,9 @@
                                 </div>
                             </div>
                         </div>
+                        <!-- slider item END -->
 
+                        <!-- slider item -->
                         <div class="slider-item" style="background-image:url(files/slider-15.jpg)">
                             <div class="container">
                                 <div class="slider-item-inner">
@@ -323,7 +335,9 @@
                                 </div>
                             </div>
                         </div>
+                        <!-- slider item END -->
 
+                        <!-- slider item --
                         <div class="slider-item" style="background-image:url(files/slider-16.jpg)">
                             <div class="container">
                                 <div class="slider-item-inner">
@@ -337,7 +351,9 @@
                                 </div>
                             </div>
                         </div>
+                        <!-- slider item END -->
 
+                        <!-- slider item --
                         <div class="slider-item" style="background-image:url(files/slider-17.jpg)">
                             <div class="container">
                                 <div class="slider-item-inner">
@@ -351,7 +367,9 @@
                                 </div>
                             </div>
                         </div>
+                        <!-- slider item END -->
 
+                        <!-- slider item --
                         <div class="slider-item" style="background-image:url(files/slider-18.jpg)">
                             <div class="container">
                                 <div class="slider-item-inner">
@@ -365,7 +383,7 @@
                                 </div>
                             </div>
                         </div>
--->
+                        <!-- slider item END -->
 
                     </div>
                 </div>
