--- a/main.html
+++ b/main.html
@@ -98,10 +98,13 @@
                     <div class="slider-list">
 
                         <!-- slider item -->
-                        <div class="slider-item" style="background-image:url(files/slider-01.jpg)">
+                        <div class="slider-item">
+                            <div class="slider-item-bg" style="background-image:url(files/slider-01.jpg)"></div>
+                            <div class="slider-item-bg-mobile" style="background-image:url(files/slider-01-mobile.jpg)"></div>
                             <div class="container">
                                 <div class="slider-item-inner">
                                     <div class="slider-item-blur"><div class="slider-item-blur-inner" style="background-image:url(files/slider-01.jpg)"></div></div>
+                                    <div class="slider-item-blur-mobile"><div class="slider-item-blur-inner" style="background-image:url(files/slider-01-mobile.jpg)"></div></div>
                                     <div class="slider-item-content" style="background:rgba(153, 51, 153, .5)">
                                         <div class="slider-item-category">/ Праздник</div>
                                         <div class="slider-item-title">Загадай желание</div>
@@ -129,11 +132,14 @@
                         </div>
                         <!-- slider item END -->
 
-                        <!-- slider item --
+                        <!-- slider item -->
                         <div class="slider-item" style="background-image:url(files/slider-03.jpg)">
+                            <div class="slider-item-bg" style="background-image:url(files/slider-03.jpg)"></div>
+                            <div class="slider-item-bg-mobile" style="background-image:url(files/slider-03-mobile.jpg)"></div>
                             <div class="container">
                                 <div class="slider-item-inner">
                                     <div class="slider-item-blur"><div class="slider-item-blur-inner" style="background-image:url(files/slider-03.jpg)"></div></div>
+                                    <div class="slider-item-blur-mobile"><div class="slider-item-blur-inner" style="background-image:url(files/slider-03-mobile.jpg)"></div></div>
                                     <div class="slider-item-content" style="background:rgba(153, 0, 0, .5)">
                                         <div class="slider-item-category">/ Праздник</div>
                                         <div class="slider-item-title">Новый год</div>
@@ -194,10 +200,13 @@
                         <!-- slider item END -->
 
                         <!-- slider item -->
-                        <div class="slider-item" style="background-image:url(files/slider-07.jpg)">
+                        <div class="slider-item">
+                            <div class="slider-item-bg" style="background-image:url(files/slider-07.jpg)"></div>
+                            <div class="slider-item-bg-mobile" style="background-image:url(files/slider-07-mobile.jpg)"></div>
                             <div class="container">
                                 <div class="slider-item-inner">
                                     <div class="slider-item-blur"><div class="slider-item-blur-inner" style="background-image:url(files/slider-07.jpg)"></div></div>
+                                    <div class="slider-item-blur-mobile"><div class="slider-item-blur-inner" style="background-image:url(files/slider-07-mobile.jpg)"></div></div>
                                     <div class="slider-item-content" style="background:rgba(153, 51, 153, .5)">
                                         <div class="slider-item-category">/ Декор</div>
                                         <div class="slider-item-title">Декор в&nbsp;деталях</div>
@@ -226,10 +235,13 @@
                         <!-- slider item END -->
 
                         <!-- slider item -->
-                        <div class="slider-item" style="background-image:url(files/slider-09.jpg)">
+                        <div class="slider-item">
+                            <div class="slider-item-bg" style="background-image:url(files/slider-09.jpg)"></div>
+                            <div class="slider-item-bg-mobile" style="background-image:url(files/slider-09-mobile.jpg)"></div>
                             <div class="container">
                                 <div class="slider-item-inner">
                                     <div class="slider-item-blur"><div class="slider-item-blur-inner" style="background-image:url(files/slider-09.jpg)"></div></div>
+                                    <div class="slider-item-blur-mobile"><div class="slider-item-blur-inner" style="background-image:url(files/slider-09-mobile.jpg)"></div></div>
                                     <div class="slider-item-content" style="background:rgba(153, 51, 153, .5)">
                                         <div class="slider-item-category">/ Декор</div>
                                         <div class="slider-item-title">Cчастье без&nbsp;границ</div>
@@ -242,10 +254,13 @@
                         <!-- slider item END -->
 
                         <!-- slider item -->
-                        <div class="slider-item" style="background-image:url(files/slider-10.jpg)">
+                        <div class="slider-item">
+                            <div class="slider-item-bg" style="background-image:url(files/slider-10.jpg)"></div>
+                            <div class="slider-item-bg-mobile" style="background-image:url(files/slider-10-mobile.jpg)"></div>
                             <div class="container">
                                 <div class="slider-item-inner">
                                     <div class="slider-item-blur"><div class="slider-item-blur-inner" style="background-image:url(files/slider-10.jpg)"></div></div>
+                                    <div class="slider-item-blur-mobile"><div class="slider-item-blur-inner" style="background-image:url(files/slider-10-mobile.jpg)"></div></div>
                                     <div class="slider-item-content" style="background:rgba(200, 46, 41, .5)">
                                         <div class="slider-item-category">/ Декор</div>
                                         <div class="slider-item-title">Декор в&nbsp;деталях</div>
@@ -274,10 +289,13 @@
                         <!-- slider item END -->
 
                         <!-- slider item -->
-                        <div class="slider-item" style="background-image:url(files/slider-12.jpg)">
+                        <div class="slider-item">
+                            <div class="slider-item-bg" style="background-image:url(files/slider-12.jpg)"></div>
+                            <div class="slider-item-bg-mobile" style="background-image:url(files/slider-12-mobile.jpg)"></div>
                             <div class="container">
                                 <div class="slider-item-inner">
                                     <div class="slider-item-blur"><div class="slider-item-blur-inner" style="background-image:url(files/slider-12.jpg)"></div></div>
+                                    <div class="slider-item-blur-mobile"><div class="slider-item-blur-inner" style="background-image:url(files/slider-12-mobile.jpg)"></div></div>
                                     <div class="slider-item-content" style="background:rgba(153, 51, 153, .5)">
                                         <div class="slider-item-category">/ Леди</div>
                                         <div class="slider-item-title">Праздник для нее</div>
@@ -306,10 +324,13 @@
                         <!-- slider item END -->
 
                         <!-- slider item -->
-                        <div class="slider-item" style="background-image:url(files/slider-14.jpg)">
+                        <div class="slider-item">
+                            <div class="slider-item-bg" style="background-image:url(files/slider-14.jpg)"></div>
+                            <div class="slider-item-bg-mobile" style="background-image:url(files/slider-14-mobile.jpg)"></div>
                             <div class="container">
                                 <div class="slider-item-inner">
                                     <div class="slider-item-blur"><div class="slider-item-blur-inner" style="background-image:url(files/slider-14.jpg)"></div></div>
+                                    <div class="slider-item-blur-mobile"><div class="slider-item-blur-inner" style="background-image:url(files/slider-14-mobile.jpg)"></div></div>
                                     <div class="slider-item-content" style="background:rgba(153, 51, 153, .5)">
                                         <div class="slider-item-category">/ Дети</div>
                                         <div class="slider-item-title">Атмосфера радости</div>
@@ -322,10 +343,13 @@
                         <!-- slider item END -->
 
                         <!-- slider item -->
-                        <div class="slider-item" style="background-image:url(files/slider-15.jpg)">
+                        <div class="slider-item">
+                            <div class="slider-item-bg" style="background-image:url(files/slider-15.jpg)"></div>
+                            <div class="slider-item-bg-mobile" style="background-image:url(files/slider-15-mobile.jpg)"></div>
                             <div class="container">
                                 <div class="slider-item-inner">
                                     <div class="slider-item-blur"><div class="slider-item-blur-inner" style="background-image:url(files/slider-15.jpg)"></div></div>
+                                    <div class="slider-item-blur-mobile"><div class="slider-item-blur-inner" style="background-image:url(files/slider-15-mobile.jpg)"></div></div>
                                     <div class="slider-item-content" style="background:rgba(153, 51, 153, .5)">
                                         <div class="slider-item-category">/ Дети</div>
                                         <div class="slider-item-title">Атмосфера радости</div>
